Commit work so far

--- a/research-proposal-presentation-01/citations.bib
+++ b/research-proposal-presentation-01/citations.bib
@@ -174,3 +174,29 @@ doi = {10.13128/Music_Tec-13210}
 	number={9},
 	pages={2686-2695},
 	doi={10.1109/TCSI.2008.921023}}
+
+@article{tftradeoff1,
+author = {Simpson, Andrew},
+year = {2015},
+title = {Time-Frequency Trade-offs for Audio Source Separation with Binary Masks}
+}
+
+@inproceedings{tftradeoff2,
+	author={R. R. {Johnson}},
+	booktitle={2017 Third International Conference on Sensing, Signal Processing and Security (ICSSS)},
+	title={Effect of window length in combining blind source separation and beamforming},
+	year={2017},
+       	pages={447-449},
+	doi={10.1109/SSPS.2017.8071638}
+}
+
+@article{vincent07,
+author = {Vincent, Emmanuel and Gribonval, Rémi and Plumbley, Mark},
+year = {2007},
+month = {08},
+pages = {1933-1950},
+title = {Oracle estimators for the benchmarking of source separation algorithms},
+volume = {87},
+journal = {Signal Processing},
+doi = {10.1016/j.sigpro.2007.01.016}
+}
